feat: Refactor Calendario and related components to enhance DTO handling, improve service methods, and add logging